--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'jacoco'
 
-task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
+def unitTest='testQaDebugUnitTest'
+def coverageReport='createQaDebugCoverageReport'
+task jacocoTestReport(type: JacocoReport, dependsOn: [unitTest,coverageReport ]) {
 
     jacoco {
         // after updating to the Android Gradle plugin 3.0.0
@@ -36,6 +38,13 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    buildToolsVersion '27.0.1'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -45,12 +54,17 @@ android {
             testCoverageEnabled = true
         }
     }
-    buildToolsVersion '27.0.1'
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
-    }
+
+    flavorDimensions "default"
     productFlavors {
+        qa {
+            applicationIdSuffix ".qa"
+            versionCode 1
+            versionName "1.0"
+            versionNameSuffix "-qa"
+        }
+        prod{
+        }
     }
 }
 
