--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,12 +58,14 @@ android {
     flavorDimensions "default"
     productFlavors {
         qa {
+            resValue "string", "app_name", "Memos-qa"
             applicationIdSuffix ".qa"
             versionCode 1
             versionName "1.0"
             versionNameSuffix "-qa"
         }
         prod{
+            resValue "string", "app_name", "Memos"
         }
     }
 }
@@ -77,6 +79,7 @@ dependencies {
     implementation 'de.greenrobot:eventbus:2.4.1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'android.arch.persistence.room:testing:1.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.1'
