--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ android {
         }
     }
 
-    buildToolsVersion '27.0.1'
+    buildToolsVersion '27.0.3'
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
@@ -84,7 +84,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'android.arch.persistence.room:runtime:1.0.0'
-    implementation 'de.greenrobot:eventbus:2.4.1'
+    implementation 'org.greenrobot:eventbus:3.1.1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'android.arch.persistence.room:testing:1.0.0'
