--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,23 @@
 language: android
 jdk: oraclejdk8
 sudo: false
-
+env:
+  global:
+    - ANDROID_API_LEVEL=26
+    - ANDROID_BUILD_TOOLS_VERSION=26.0.2
+    - EMULATOR_API_LEVEL=21
 android:
   components:
     - platform-tools
     - tools
-    - build-tools-26.0.2
-    - android-22
-    - android-26
-    - sys-img-armeabi-v7a-android-26
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
     - extra-android-m2repository
 
 before_script:
   # Create and start emulator
-  - echo no | android create avd --force -n test -t android-26 -abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
