--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,22 @@ jdk: oraclejdk8
 sudo: false
 env:
   global:
-    - ANDROID_API_LEVEL=26
     - ANDROID_BUILD_TOOLS_VERSION=26.0.2
-    - EMULATOR_API_LEVEL=21
+    - ANDROID_API_LEVEL=26
+    - EMULATOR_API_LEVEL=24
 android:
   components:
     - platform-tools
     - tools
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
+    - android-$EMULATOR_API_LEVEL
     - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
     - extra-android-m2repository
 
 before_script:
   # Create and start emulator
-  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a -c 32M
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
