--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,12 @@ android:
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
     - android-$EMULATOR_API_LEVEL
-    - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
+    - sys-img-armeabi-v7a-android-$EMULATOR_API_LEVEL
     - extra-android-m2repository
 
 before_script:
   # Create and start emulator
+  - android list targets
   - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a -c 32M
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
