--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,24 @@ jdk: oraclejdk8
 sudo: false
 env:
   global:
-    - ANDROID_BUILD_TOOLS_VERSION=26.0.2
-    - ANDROID_API_LEVEL=26
-    - EMULATOR_API_LEVEL=24
+    - ANDROID_BUILD_TOOLS=26.0.1
+    - ANDROID_API=26
+    - EMULATOR_API=24
 android:
   components:
     - platform-tools
     - tools
-    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
-    - android-$ANDROID_API_LEVEL
-    - android-$EMULATOR_API_LEVEL
-    - sys-img-armeabi-v7a-android-$EMULATOR_API_LEVEL
+    - build-tools-$ANDROID_BUILD_TOOLS
+    - android-$ANDROID_API
+    - android-$EMULATOR_API
+    - sys-img-armeabi-v7a-android-$EMULATOR_API
     - extra-android-m2repository
 
 before_script:
   # Create and start emulator
   - android list targets
-  - echo no | android create avd --force -n test -t android-$EMULATOR_API_LEVEL --abi armeabi-v7a -c 32M
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - echo no | android create avd --force -n test -t android-$EMULATOR_API --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
