--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk: oraclejdk8
 sudo: false
 env:
   global:
-    - ANDROID_BUILD_TOOLS=26.0.1
+    - ANDROID_BUILD_TOOLS=26.0.2
     - ANDROID_API=26
     - EMULATOR_API=24
 android:
@@ -15,6 +15,9 @@ android:
     - android-$EMULATOR_API
     - sys-img-armeabi-v7a-android-$EMULATOR_API
     - extra-android-m2repository
+
+before_install:
+ - chmod +x gradlew
 
 before_script:
   # Create and start emulator
