--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk: oraclejdk8
 sudo: false
 env:
   global:
-    - ANDROID_BUILD_TOOLS=26.0.2
+    - ANDROID_BUILD_TOOLS=27.0.3
     - ANDROID_API=26
     - EMULATOR_API=24
 android:
@@ -15,9 +15,13 @@ android:
     - android-$EMULATOR_API
     - sys-img-armeabi-v7a-android-$EMULATOR_API
     - extra-android-m2repository
+    licenses:
+    - ".+"
 
 before_install:
- - chmod +x gradlew
+  - yes | sdkmanager "platforms;android-26"
+  - yes | sdkmanager "platforms;android-27"
+  - chmod +x gradlew
 
 before_script:
   # Create and start emulator
