--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
-            testCoverageEnabled = true
+            testCoverageEnabled = false
         }
     }
 
