--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,7 +91,11 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
+    implementation 'com.google.dagger:dagger:2.15'
+    implementation 'com.google.dagger:dagger-android:2.15'
+    implementation 'com.google.dagger:dagger-android-support:2.15'
+    kapt 'com.google.dagger:dagger-android-processor:2.15'
+    kapt 'com.google.dagger:dagger-compiler:2.15'
     kapt 'com.jakewharton:butterknife-compiler:8.8.1'
     kapt 'android.arch.persistence.room:compiler:1.0.0'
     testImplementation 'junit:junit:4.12'
